<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.LandingPageActivity">

    <TextView
        android:id="@+id/x_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_black"
        android:text="@string/x"
        android:textColor="@color/red"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/o_main_menu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/o_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_black"
        android:text="@string/o"
        android:textColor="@color/green"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/x_main_menu"
        app:layout_constraintTop_toTopOf="@+id/x_main_menu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_button"
        android:text="@string/Play"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x_main_menu"
        app:layout_constraintWidth_percent=".5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_button"
        android:text="@string/rate_us"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/report_bug_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        app:layout_constraintWidth_percent=".5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/report_bug_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_button"
        android:text="@string/report_a_bug"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_button"
        app:layout_constraintWidth_percent=".5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_button"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_bug_button"
        app:layout_constraintWidth_percent=".5" />
</androidx.constraintlayout.widget.ConstraintLayout>