<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.TwoPlayerGameActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/player_one_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/player_two_card"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/scorecard_background"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/starting_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/maven_pro_black"
                android:text="@string/x"
                android:textColor="@color/red"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player_one_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Player 1"
                android:textColor="@color/light_gray"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/starting_letter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/starting_letter"
                app:layout_constraintTop_toBottomOf="@+id/starting_letter" />

            <TextView
                android:id="@+id/playerOneTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/maven_pro_black"
                android:text="@string/_0"
                android:textColor="@color/light_gray"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="@+id/player_one_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/player_one_name"
                app:layout_constraintTop_toBottomOf="@+id/player_one_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/player_two_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_one_card"
        app:layout_constraintTop_toTopOf="@+id/player_one_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/scorecard_background"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/second_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/maven_pro_black"
                android:text="@string/o"
                android:textColor="@color/green"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player_two_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/player_2"
                android:textColor="@color/light_gray"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/second_letter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/second_letter"
                app:layout_constraintTop_toBottomOf="@+id/second_letter" />

            <TextView
                android:id="@+id/playerTwoTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/maven_pro_black"
                android:text="@string/_0"
                android:textColor="@color/light_gray"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="@+id/player_two_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/player_two_name"
                app:layout_constraintTop_toBottomOf="@+id/player_two_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="@string/scoreboard"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/playerOneTextViewId"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="@string/player_1_0"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <TextView-->
<!--        android:id="@+id/playerTwoTextViewId"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:text="@string/player_2_0"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <ImageView
        android:id="@+id/btn00"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <ImageView
        android:id="@+id/btn01"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn00" />

    <ImageView
        android:id="@+id/btn02"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintStart_toEndOf="@+id/btn01"
        app:layout_constraintTop_toTopOf="@+id/btn01" />

    <ImageView
        android:id="@+id/btn11"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toEndOf="@+id/btn01"
        app:layout_constraintStart_toEndOf="@+id/btn00"
        app:layout_constraintTop_toBottomOf="@+id/btn01" />

    <ImageView
        android:id="@+id/btn12"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintStart_toEndOf="@+id/btn11"
        app:layout_constraintTop_toBottomOf="@+id/btn02" />

    <ImageView
        android:id="@+id/btn10"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toStartOf="@+id/btn11"
        app:layout_constraintTop_toBottomOf="@+id/btn00" />

    <ImageView
        android:id="@+id/btn21"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toEndOf="@+id/btn11"
        app:layout_constraintStart_toStartOf="@+id/btn11"
        app:layout_constraintTop_toBottomOf="@+id/btn11" />

    <ImageView
        android:id="@+id/btn22"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintStart_toEndOf="@+id/btn21"
        app:layout_constraintTop_toBottomOf="@+id/btn12" />

    <ImageView
        android:id="@+id/btn20"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toStartOf="@+id/btn21"
        app:layout_constraintTop_toBottomOf="@+id/btn10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:paddingHorizontal="20dp"
        android:text="@string/reset_game"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn21" />
</androidx.constraintlayout.widget.ConstraintLayout>